--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<li><a class="scroll" href="#position-of-responsibilty">Experience</a></li>
 								<li><a class="scroll" href="#education">Education</a></li>
 								<li><a class="scroll" href="#projects">Projects</a></li>
-								<li><a class="scroll" href="https://drive.google.com/file/d/1qpY01zoG-tz6dYtwOljXZZd-KgQ_J4n_/view?usp=sharing">Resume</a></li>
+								<li><a class="scroll" href="https://drive.google.com/file/d/1Qh6BUv2NaC8nkH3eR_dvO3nlNNNayg6v/view?usp=sharing">Resume</a></li>
 								<li><a class="scroll" href="#contact">Contact</a></li>
 							</ul>
 
@@ -231,7 +231,7 @@
 			<div class="activity_box agileits w3layouts">
 				<div class="title-wthree">
 					<h5 class="title-w3">Education</h5>
-					<div class="clearfix"></d>
+					<div class="clearfix"></div>
 				</div>
 				<div class="scrollbar agileits w3layouts" id="style-2">
 					<div class="activity-row agileits w3layouts">
@@ -272,8 +272,6 @@
 		<div class="clearfix"></div>
 	</div>
 	<!--//education-->
-	<div style="min-height: 1em">
-	</div>
 	<!--Projects-->
 	<div class="display-w3lsagile" id="projects">
 		<div class="col-md-7 col-sm-7 exp-img-agileits">
