--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<li><a class="scroll" href="#position-of-responsibilty">Experience</a></li>
 								<li><a class="scroll" href="#education">Education</a></li>
 								<li><a class="scroll" href="#projects">Projects</a></li>
-								<li><a class="scroll" href="https://drive.google.com/file/d/1Qh6BUv2NaC8nkH3eR_dvO3nlNNNayg6v/view?usp=sharing">Resume</a></li>
+								<li><a class="scroll" href="https://drive.google.com/file/d/1Qh6BUv2NaC8nkH3eR_dvO3nlNNNayg6v/view?usp=sharing" target="_blan">Resume</a></li>
 								<li><a class="scroll" href="#contact">Contact</a></li>
 							</ul>
 
