--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<div class="banner-text-w3-agileits">
 				<h5>Hi, I'm</h5>
 				<h2><span>A</span>nkit <span>K</span>aran</h2>
-				<p>Sophomore at IIT Mandi</p>
+				<p>Junior at IIT Mandi</p>
 				<div class="botton">
 					<a href="#about" class="scroll">About me <span class="fa fa-caret-right"></span></a>
 				</div>
@@ -134,7 +134,7 @@
 						<li><span>Name</span>: Ankit Karan</li>
 						<li><span>Age</span>: 20 Years</li>
 						<li><span>College</span>: IIT Mandi</li>
-						<li><span>Year</span>: Second</li>
+						<li><span>Year</span>: Third</li>
 						<li><span>Branch</span>: Electrical Engineering</li>
 						<li><span>Hometown</span>: Madhubani</li>
 					</ul>
@@ -240,7 +240,7 @@
 						</div>
 						<div class="activity-desc agileits w3layouts">
 							<h5>Indian Institute of Technology Mandi</h5>
-							<p class="para-agileits-w3layouts">Second Year</p>
+							<p class="para-agileits-w3layouts">Third Year</p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -376,13 +376,13 @@
 				<p class="para-agileits-w3layouts">Hindi is my first language followed by English. Just started learning German.</p>
 			</div>
 			<div class="col-md-6 w3l_about_bottom_grid_right bar-grids">
-				<h6>Hindi<span> 90% </span></h6>
+				<h6>Hindi<span> 95% </span></h6>
 				<div class="progress">
 					<div class="progress-bar progress-bar-striped active" style="width: 90%">
 					</div>
 				</div>
 				<div class="mid-bar">
-					<h6>English<span> 85% </span></h6>
+					<h6>English<span> 90% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 85%">
 						</div>
