--- a/index.html
+++ b/index.html
@@ -175,7 +175,17 @@
 					</div>
 					<div class="activity-row agileits w3layouts">
 						<div class="activity-img agileits w3layouts">
-							<h6>2019- Present</h6>
+							<h6>2020 - Present</h6>
+						</div>
+						<div class="activity-desc agileits w3layouts">
+							<h5>Robotics & Automation Society, IEEE SB</h5>
+							<p class="para-agileits-w3layouts">VICE CHAIR</p>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+					<div class="activity-row agileits w3layouts">
+						<div class="activity-img agileits w3layouts">
+							<h6>2019- 2020</h6>
 						</div>
 						<div class="activity-desc agileits w3layouts">
 							<h5>Robotronics Club, SNTC, IIT Mandi</h5>
