Update: Academic, experience, POR

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 							<ul class="nav navbar-nav">
 								<li><a class="active" href="index.html">Home</a></li>
 								<li><a class="scroll" href="#about">About</a></li>
-								<li><a class="scroll" href="#position-of-responsibilty">Experience</a></li>
+								<li><a class="scroll" href="#work-experience">Experience</a></li>
+								<li><a class="scroll" href="#position-of-responsibilty">PoR</a></li>
 								<li><a class="scroll" href="#education">Education</a></li>
 								<li><a class="scroll" href="#projects">Projects</a></li>
 								<li><a href="https://drive.google.com/file/d/1Qh6BUv2NaC8nkH3eR_dvO3nlNNNayg6v/view?usp=sharing" target="_blan">Resume</a></li>
@@ -78,7 +79,7 @@
 			<div class="banner-text-w3-agileits">
 				<h5>Hi, I'm</h5>
 				<h2><span>A</span>nkit <span>K</span>aran</h2>
-				<p>Junior at IIT Mandi</p>
+				<p>Senior at IIT Mandi</p>
 				<div class="botton">
 					<a href="#about" class="scroll">About me <span class="fa fa-caret-right"></span></a>
 				</div>
@@ -100,21 +101,21 @@
 				</div>
 			</div>
 			<div class="col-md-4 about-left-agileits">
+				<div class="services-grids">
+					<a class="fa fa-globe" aria-hidden="true"></a>
+					<p class="para-agileits-w3layouts">I do mainly backend web development. Frameworks: Flask, Django, Nodejs</p>
+					<h6>Software</h6>
+				</div>
+				<div class="services-grids">
+					<a class="fa fa-desktop" aria-hidden="true"></a>
+					<p class="para-agileits-w3layouts">Good hands on experienced in Application development.</p>
+					<h6>DevOps</h6>
+				</div>
 				<div class="services-grids social">
 					<a class="fa fa-delicious" aria-hidden="true"></a>
 					<p class="para-agileits-w3layouts">Highly inerested in Robotics and Automation.</p>
 					<div class="clearfix"></div>
 					<h6>Robotics</h6>
-				</div>
-				<div class="services-grids">
-					<a class="fa fa-globe" aria-hidden="true"></a>
-					<p class="para-agileits-w3layouts">I do mainly backend web development. Frameworks: Flask, Nodejs</p>
-					<h6>Website</h6>
-				</div>
-				<div class="services-grids">
-					<a class="fa fa-desktop" aria-hidden="true"></a>
-					<p class="para-agileits-w3layouts">Good hands on experienced in software development.</p>
-					<h6>Softwares</h6>
 				</div>
 				<div class="services-grids">
 					<a class="fa fa-mobile" aria-hidden="true"></a>
@@ -132,11 +133,15 @@
 					 </p>
 					<ul>
 						<li><span>Name</span>: Ankit Karan</li>
-						<li><span>Age</span>: 20 Years</li>
+						<li><span>Age</span>: 21 Years</li>
 						<li><span>College</span>: IIT Mandi</li>
-						<li><span>Year</span>: Third</li>
-						<li><span>Branch</span>: Electrical Engineering</li>
+						<li><span>Year</span>: Fourth</li>
+						<li><span>Position</span>: Placement Coordinator</li>
 						<li><span>Hometown</span>: Madhubani</li>
+						<li><span>Branch</span>: Electrical Engineering</li>
+						<li><span>Minor</span>: 1. Computer Science Engineering</li>
+						<li><span></span>  2. Management</li>
+						
 					</ul>
 					<div class="clearfix"></div>
 
@@ -150,6 +155,57 @@
 		</div>
 	</div>
 	<!--//about-->
+	<!--work_experience-->
+	<div class="display-w3lsagile" id="work-experience">
+		<div class="col-md-7 col-sm-7 work-img-agileits">
+		</div>
+		<div class="col-md-5 col-sm-5 display-grid-w3lsagile display-grid-1-w3lsagile">
+
+			<!-- Scrolling-Articles -->
+			<div class="activity_box agileits w3layouts">
+				<div class="title-wthree">
+					<h5 class="title-w3">Work Experience</h5>
+					<div class="clearfix"></div>
+				</div>
+				<div class="scrollbar agileits w3layouts" id="style-2">
+					<div class="activity-row agileits w3layouts">
+						<div class="activity-img agileits w3layouts">
+							<h6>August'21 - Present</h6>
+						</div>
+						<div class="activity-desc agileits w3layouts">
+							<h5>Siemens Technology & Services Pvt. Ltd.</h5>
+							<p class="para-agileits-w3layouts">Software Developer Intern</p>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+					<div class="activity-row agileits w3layouts">
+						<div class="activity-img agileits w3layouts">
+							<h6>June'21 - August'21</h6>
+						</div>
+						<div class="activity-desc agileits w3layouts">
+							<h5>ReQIP India</h5>
+							<p class="para-agileits-w3layouts">Software Developer Intern</p>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+					<div class="activity-row agileits w3layouts">
+						<div class="activity-img agileits w3layouts">
+							<h6>April'20 - September'20</h6>
+						</div>
+						<div class="activity-desc agileits w3layouts">
+							<h5>Google Summer of Code @ LabLua</h5>
+							<p class="para-agileits-w3layouts">Software Developer</p>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+				</div>
+			</div>
+			<!-- //Scrolling-Articles -->
+
+		</div>
+		<div class="clearfix"></div>
+	</div>
+	<!--//work_experience-->
 	<!--position of responsibilty-->
 	<div class="display-w3lsagile" id="position-of-responsibilty">
 		<div class="col-md-7 col-sm-7 por-img-agileits">
@@ -165,7 +221,17 @@
 				<div class="scrollbar agileits w3layouts" id="style-2">
 					<div class="activity-row agileits w3layouts">
 						<div class="activity-img agileits w3layouts">
-							<h6>2020- Present</h6>
+							<h6>2021-Present</h6>
+						</div>
+						<div class="activity-desc agileits w3layouts">
+							<h5>Carrer & Placement Cell, IIT Mandi</h5>
+							<p class="para-agileits-w3layouts">Placement Coordinator</p>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+					<div class="activity-row agileits w3layouts">
+						<div class="activity-img agileits w3layouts">
+							<h6>2020-2021</h6>
 						</div>
 						<div class="activity-desc agileits w3layouts">
 							<h5>Carrer & Placement Cell, IIT Mandi</h5>
@@ -175,7 +241,7 @@
 					</div>
 					<div class="activity-row agileits w3layouts">
 						<div class="activity-img agileits w3layouts">
-							<h6>2020 - Present</h6>
+							<h6>2020 - 2021</h6>
 						</div>
 						<div class="activity-desc agileits w3layouts">
 							<h5>Robotics & Automation Society, IEEE SB</h5>
@@ -195,7 +261,7 @@
 					</div>
 					<div class="activity-row agileits w3layouts">
 						<div class="activity-img agileits w3layouts">
-							<h6>2019-Present</h6>
+							<h6>2019-2021</h6>
 						</div>
 						<div class="activity-desc agileits w3layouts">
 							<h5>Programming Club, IIT Mandi</h5>
@@ -250,7 +316,7 @@
 						</div>
 						<div class="activity-desc agileits w3layouts">
 							<h5>Indian Institute of Technology Mandi</h5>
-							<p class="para-agileits-w3layouts">Third Year</p>
+							<p class="para-agileits-w3layouts">Fourth Year</p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -423,7 +489,10 @@
 				</div>
 				<div class="address-w3layouts">
 					<p>
-						Email : karanankit01@gmail.com
+						<a href = "mailto: karanankit01@gmail.com">Email : karanankit01@gmail.com</a>
+					</p>
+					<p>
+						<a href="tel:+917667911376">Call : +91-7667911376</a>
 					</p>
 					<p class="para-agileits-w3layouts">My social media and github profiles</p>
 				</div>
