--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<div class="banner-text-w3-agileits">
 				<h5>Hi, I'm</h5>
 				<h2><span>A</span>nkit <span>K</span>aran</h2>
-				<p>Senior at IIT Mandi</p>
+				<p>Software Engineer at Samsung</p>
 				<div class="botton">
 					<a href="#about" class="scroll">About me <span class="fa fa-caret-right"></span></a>
 				</div>
@@ -125,8 +125,8 @@
 				</div>
 				<div class="services-grids">
 					<a class="fa fa-mobile" aria-hidden="true"></a>
-					<p class="para-agileits-w3layouts">Haven't started with Android development, but plan to do so after some time.</p>
-					<h6>Applications</h6>
+					<p class="para-agileits-w3layouts">Worked on innovative real world IoT solutions with cloud computation. </p>
+					<h6>IoT & Cloud</h6>
 				</div>
 				<div class="clearfix"></div>
 			</div>
@@ -135,18 +135,21 @@
 				<div class="about-border-w3ls">
 				</div>
 				<div class="person-info-agileits-w3layouts">
-					<p class="para-agileits-w3layouts"><span>Hi!, I am Ankit Karan </span> I am an Engineering undergraduate student from India. 
+					<p class="para-agileits-w3layouts"><span>Hi, I am Ankit Karan </span> I am a Software Engineer at Samsung. 
 					 </p>
+					 I did my graduation(B.Tech) from IIT Mandi (2018-22).
 					<ul>
 						<li><span>Name</span>: Ankit Karan</li>
-						<li><span>Age</span>: 21 Years</li>
+						<li><span>Age</span>: 22 Years</li>
 						<li><span>College</span>: IIT Mandi</li>
-						<li><span>Year</span>: Fourth</li>
-						<li><span>Position</span>: Placement Coordinator</li>
-						<li><span>Hometown</span>: Madhubani</li>
+						<li><span>Batch</span>: 2018-22</li>
 						<li><span>Branch</span>: Electrical Engineering</li>
 						<li><span>Minor</span>: 1. Computer Science Engineering</li>
 						<li><span></span>  2. Management</li>
+						<li><span>Job Profile</span>: Software Engineer</li>
+						<li></li>
+						<li><span>Company</span>: Samsung (SRI-B)</li>
+						<li><span>Hometown</span>: Madhubani, BIHAR</li>
 						
 					</ul>
 					<div class="clearfix"></div>
@@ -176,7 +179,17 @@
 				<div class="scrollbar agileits w3layouts" id="style-2">
 					<div class="activity-row agileits w3layouts">
 						<div class="activity-img agileits w3layouts">
-							<h6>August'21 - Present</h6>
+							<h6>July'22 - Present</h6>
+						</div>
+						<div class="activity-desc agileits w3layouts">
+							<h5>Samsung R&D Insitute, Bangalore (SRI-B)</h5>
+							<p class="para-agileits-w3layouts">Software Engineer</p>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+					<div class="activity-row agileits w3layouts">
+						<div class="activity-img agileits w3layouts">
+							<h6>August'21 - November'21</h6>
 						</div>
 						<div class="activity-desc agileits w3layouts">
 							<h5>Siemens Technology & Services Pvt. Ltd.</h5>
@@ -227,11 +240,31 @@
 				<div class="scrollbar agileits w3layouts" id="style-2">
 					<div class="activity-row agileits w3layouts">
 						<div class="activity-img agileits w3layouts">
-							<h6>2021-Present</h6>
+							<h6>2021-2022</h6>
 						</div>
 						<div class="activity-desc agileits w3layouts">
 							<h5>Carrer & Placement Cell, IIT Mandi</h5>
 							<p class="para-agileits-w3layouts">Placement Coordinator</p>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+					<div class="activity-row agileits w3layouts">
+						<div class="activity-img agileits w3layouts">
+							<h6>2022</h6>
+						</div>
+						<div class="activity-desc agileits w3layouts">
+							<h5>XPECTO'22, TechFest, IIT Mandi</h5>
+							<p class="para-agileits-w3layouts">Co-founder, Mentor, 1st edition</p>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+					<div class="activity-row agileits w3layouts">
+						<div class="activity-img agileits w3layouts">
+							<h6>2021 - 2022</h6>
+						</div>
+						<div class="activity-desc agileits w3layouts">
+							<h5>Robotics & Automation Society, IEEE SB</h5>
+							<p class="para-agileits-w3layouts">CHAIR  PERSON</p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -318,11 +351,11 @@
 				<div class="scrollbar agileits w3layouts" id="style-2">
 					<div class="activity-row agileits w3layouts">
 						<div class="activity-img agileits w3layouts">
-							<h6>2018- Present</h6>
+							<h6>2018- 2022</h6>
 						</div>
 						<div class="activity-desc agileits w3layouts">
-							<h5>Indian Institute of Technology Mandi</h5>
-							<p class="para-agileits-w3layouts">Fourth Year</p>
+							<h5>Indian Institute of Technology, Mandi</h5>
+							<p class="para-agileits-w3layouts">B.Tech. EE </p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -507,7 +540,7 @@
 						<ul>
 							<li><a href="https://www.facebook.com/ankit.karan.58" class="fa fa-facebook"></a></li>
 							<li><a href="https://github.com/karanankit01" class="fa fa-github"></a></li>
-							<li><a href="https://www.linkedin.com/in/ankit-karan-47904b182/" class="fa fa-linkedin"></a></li>
+							<li><a href="https://www.linkedin.com/in/karanankit01/" class="fa fa-linkedin"></a></li>
 							<li><a href="https://www.instagram.com/_i_m_ank_/" class="fa fa-instagram"></a></li>
 							<li><a href="https://twitter.com/baba_gyanee" class="fa fa-twitter"></a></li>
 						</ul>
