--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<div class="banner-text-w3-agileits">
 				<h5>Hi, I'm</h5>
 				<h2><span>A</span>nkit <span>K</span>aran</h2>
-				<p>Software Engineer at Samsung</p>
+				<p>Lead Software Engineer at Samsung</p>
 				<div class="botton">
 					<a href="#about" class="scroll">About me <span class="fa fa-caret-right"></span></a>
 				</div>
@@ -106,20 +106,23 @@
 					<p class="para-agileits-w3layouts"></p>
 				</div>
 			</div>
+			<div style="text-align: center; margin-bottom: 20px;">
+				<img src="images/Ankit_DP_crop.jpg" alt="Ankit Karan" style="border-radius: 50%; width: 180px; height: 180px; object-fit: cover; border: 4px solid #fff;" />
+			</div>			  
 			<div class="col-md-4 about-left-agileits">
 				<div class="services-grids">
 					<a class="fa fa-globe" aria-hidden="true"></a>
-					<p class="para-agileits-w3layouts">I do mainly backend web development. Frameworks: Flask, Django, Nodejs</p>
-					<h6>Software</h6>
+					<p class="para-agileits-w3layouts">Experienced in full-stack development. Skills: dotNet, Flask, Nodejs, C#, Cpp</p>
+					<h6>Full Stack Development</h6>
 				</div>
 				<div class="services-grids">
 					<a class="fa fa-desktop" aria-hidden="true"></a>
-					<p class="para-agileits-w3layouts">Good hands on experienced in Application development.</p>
+					<p class="para-agileits-w3layouts">Good hands in System development and CI/CD pipeline.</p>
 					<h6>DevOps</h6>
 				</div>
 				<div class="services-grids social">
 					<a class="fa fa-delicious" aria-hidden="true"></a>
-					<p class="para-agileits-w3layouts">Highly inerested in Robotics and Automation.</p>
+					<p class="para-agileits-w3layouts">Highly interested in Robotics and Automation.</p>
 					<div class="clearfix"></div>
 					<h6>Robotics</h6>
 				</div>
@@ -135,18 +138,18 @@
 				<div class="about-border-w3ls">
 				</div>
 				<div class="person-info-agileits-w3layouts">
-					<p class="para-agileits-w3layouts"><span>Hi, I am Ankit Karan </span> I am a Software Engineer at Samsung. 
+					<p class="para-agileits-w3layouts"><span>Hi, I am Ankit Karan </span> I am a Lead Software Engineer at Samsung. 
 					 </p>
 					 I did my graduation(B.Tech) from IIT Mandi (2018-22).
 					<ul>
 						<li><span>Name</span>: Ankit Karan</li>
-						<li><span>Age</span>: 22 Years</li>
+						<li><span>Age</span>: 25 Years</li>
 						<li><span>College</span>: IIT Mandi</li>
 						<li><span>Batch</span>: 2018-22</li>
 						<li><span>Branch</span>: Electrical Engineering</li>
 						<li><span>Minor</span>: 1. Computer Science Engineering</li>
-						<li><span></span>  2. Management</li>
-						<li><span>Job Profile</span>: Software Engineer</li>
+						<li><span></span>   2. Management</li>
+						<li><span>Job Profile</span>: Lead Software Engineer</li>
 						<li></li>
 						<li><span>Company</span>: Samsung (SRI-B)</li>
 						<li><span>Hometown</span>: Madhubani, BIHAR</li>
@@ -179,10 +182,28 @@
 				<div class="scrollbar agileits w3layouts" id="style-2">
 					<div class="activity-row agileits w3layouts">
 						<div class="activity-img agileits w3layouts">
-							<h6>July'22 - Present</h6>
+							<h6>March'25 - Present</h6>
 						</div>
 						<div class="activity-desc agileits w3layouts">
-							<h5>Samsung R&D Insitute, Bangalore (SRI-B)</h5>
+							<h5>Samsung Research India, Bangalore (SRI-B)</h5>
+							<p class="para-agileits-w3layouts">Lead Software Engineer</p>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+					<div class="activity-row agileits w3layouts">
+						<div class="activity-img agileits w3layouts">
+							<h6>March'24 - Feb'25</h6>
+						</div>
+						<div class="activity-desc agileits w3layouts">
+							<p class="para-agileits-w3layouts">Senior Software Engineer</p>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+					<div class="activity-row agileits w3layouts">
+						<div class="activity-img agileits w3layouts">
+							<h6>July'22 - March'24</h6>
+						</div>
+						<div class="activity-desc agileits w3layouts">
 							<p class="para-agileits-w3layouts">Software Engineer</p>
 						</div>
 						<div class="clearfix"></div>
@@ -244,7 +265,7 @@
 						</div>
 						<div class="activity-desc agileits w3layouts">
 							<h5>Carrer & Placement Cell, IIT Mandi</h5>
-							<p class="para-agileits-w3layouts">Placement Coordinator</p>
+							<p class="para-agileits-w3layouts">Placement Head</p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -364,8 +385,8 @@
 							<h6>2015-2017</h6>
 						</div>
 						<div class="activity-desc agileits w3layouts">
-							<h5>Indian Public College</h5>
-							<p class="para-agileits-w3layouts">Percentage: 92%</p>
+							<h5>Indian Public School</h5>
+							<p class="para-agileits-w3layouts">12th Percentage: 92%</p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -374,8 +395,8 @@
 							<h6>2013-2015</h6>
 						</div>
 						<div class="activity-desc agileits w3layouts">
-							<h5>Indian Public College</h5>
-							<p class="para-agileits-w3layouts">CGPA: 10.0</p>
+							<h5>Indian Public School</h5>
+							<p class="para-agileits-w3layouts">10th CGPA: 10.0</p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
